objects/Project_Resource_Rollup__c.object
<CustomObject>
    <label>Project Resource Rollup</label>
    <nameField>
        <displayFormat>PRR-{00000000}</displayFormat>
        <label>Project Resource Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resource Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <referenceTo>Time__c</referenceTo>
        <relationshipLabel>Project Resource Rollups</relationshipLabel>
        <relationshipName>Project_Resource_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <label>Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Resource__c</fullName>
        <label>Project Resource</label>
        <referenceTo>Project_Resource__c</referenceTo>
        <relationshipLabel>Project Resource Rollups</relationshipLabel>
        <relationshipName>Project_Resource_Rollups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>